# 39c3-transformer-workshop

./: .gitignore  DESCRIPTION.md  README.md  flake.nix  pyproject.toml  requirements.txt  test-your-env.py
datasets/addition/: generate.ipynb  generator.py
models/addition/: model.py  train.ipynb  trainer.py
models/addition/buildblocks/: __init__.py
models/addition/buildblocks/attention/: mhsa.py
models/addition/buildblocks/layers/: decoder.py  encoder.py
models/addition/buildblocks/mlp/: positionwise.py
models/addition/buildblocks/pe/: rope.py  sinusoidal.py
models/addition/training/: train.ipynb
