[project]
name = "39c3-transformer-workshop"
version = "0.1.0"
description = "Transformer workshop project"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "jupyter",
    "matplotlib",
    "termcolor",
    "torch",
    "torchinfo",
    "tqdm",
    "umap-learn",
    "einops",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
