[project]
name = "39c3-transformer-workshop"
version = "0.1.0"
description = "39C3 Transformer Workshop"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "einops",
    "jupyter",
    "matplotlib",
    "torch",
    "torchinfo",
    "tqdm",
    "umap-learn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
